@@ -16,6 +16,7 @@
 -- Waves now generated by re-usable little synthethizer library dubbed
    libsyn123.
 -- Pink noise from libsyn123 added (using code from Phil Burk).
+-- Geiger-Mueller counter simulation from libsyn123.
 - libsyn123:
 -- Created the library to host some simple signal generators for testing
    output.
